Fix contrast mistakes.
Use the colors from the prototype instead of the photoshop file.

--- a/themes/cakephp/static/default.css
+++ b/themes/cakephp/static/default.css
@@ -21,6 +21,11 @@
     font-style: normal;
 }
 
+/* Internal and external links generated by docutils have em inside the a. */
+.reference em {
+    font-style: normal;
+}
+
 .page-container {
     padding-top: 160px;
 }
@@ -544,7 +549,7 @@ dl tt {
 
 .seealso,
 .tip {
-    background: #edffff;
+    background: #d9edf7;
 }
 .seealso:before,
 .tip:before {
@@ -553,19 +558,17 @@ dl tt {
 }
 
 .note {
-    background: #fffff3
+    background: #fcf8e3;
 }
 .note:before {
     color: #E2C99C;
     content: 'U';
 }
-
 .topic {
     background: #eee;
 }
-
 .warning {
-    background: #fff6f5;
+    background: #f2dede;
 }
 .warning:before {
     color: #E0B9B9;
@@ -575,7 +578,7 @@ dl tt {
 .deprecated,
 .versionadded,
 .versionchanged {
-    background: #effef7;
+    background: #dff0d8;
 }
 .versionmodified {
     font-style: italic;
@@ -679,6 +682,7 @@ dt tt {
 .staticmethod .descname,
 .staticmethod .descclassname {
     font-family: "Roboto Mono", "Consolas", "Monaco", monospace;
+    font-weight: normal;
     font-size: 14px;
 }
 .role .descname,
