--- a/themes/cakephp/static/pygments.css
+++ b/themes/cakephp/static/pygments.css
@@ -4,7 +4,7 @@
     margin-bottom: 18px;
     overflow-x: auto;
     padding: 10px;
-    background: #fcfcfa;
+    background: #ECECE9;
     color: #222;
     line-height: 120%;
     border: none;
